# OMRChecker

./: .gitignore  INTEGRATION_PLAN.md  MVP_PLAN.md  README.md  pyproject.toml
backend/: .gitignore  README.md  config.py  main.py  requirements.txt
backend/outputs/Results/: Results_10PM.csv
backend/routes/: omr.py
backend/storage/archive/: bak.json  config.json  template.json
backend/storage/batches/: batch_20251024_222819.json  batch_20251024_223039.json  batch_20251024_224149.json  batch_20251024_224241.json  batch_20251024_224308.json  batch_20251024_224734.json  batch_20251024_225226.json  batch_20251024_225253.json  batch_20251024_225610.json  batch_20251027_000424.json  batch_20251027_001321.json  batch_20251027_003636.json  batch_20251027_003657.json  batch_20251027_003740.json  batch_20251027_003757.json  batch_20251027_004132.json  batch_20251027_004149.json  batch_20251027_004510.json  batch_20251027_065105.json  batch_20251027_071105.json  batch_20251027_154701.json
backend/storage/results/: Results_Master.csv  Results_batch_20251024_225610.csv  Results_batch_20251027_065105.csv  Results_batch_20251027_071105.csv  Results_batch_20251027_154701.csv
backend/utils/: csv_helper.py  omr_helper.py
backend/workers/: processor.py
frontend/: README.md  package-lock.json  package.json
omr_generate/: generate.py
omrfront/: package-lock.json  package.json
stresstest/: .gitignore  README.md  coordinates.json  omr_generate.py  omr_validate.py  package-lock.json  package.json  tsconfig.json
stresstest/src/: generate_omr.ts  index.ts  types.ts
(+20 files in other folders)
