[project]
name = "omrchecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepmerge>=2.0",
    "dotmap>=1.3.30",
    "fastapi>=0.128.7",
    "jsonschema>=4.26.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "rich>=14.3.2",
    "screeninfo>=0.8.1",
    "uvicorn>=0.40.0",
]
